Reverted accidental changes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 
 <!-- saved from url=(0035)http://straightasacircle.github.io/ -->
-<html hola_ext_inject="disabled"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script type="text/javascript">
+<html>
+  <head>
+  <script type="text/javascript">
   var canvas, ctx, flag = false,
       prevX = 0,
       currX = 0,
@@ -97,9 +99,9 @@
       }
   }
   </script>
-  </head><body onload="init()">
+  </head>
+  <body onload="init()">
       <h1>Draw a Straight Line</h1>
       <canvas id="can" width="800" height="600" style="position:absolute;top:10%;left:10%;border:2px solid;"></canvas>
-  
-
-</body></html>
+  </body>
+</html>
